tests/expectations/parser/functions/function_name_is_not_identifier.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', ';', '?', 'as' -- found '('
    --> test:4:21
     |
   4 |         return 100u8(0u8);
     |                     ^
